# embedded-hal-i2c

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
embedded-hal-i2c/: Cargo.toml
embedded-hal-i2c-target/: Cargo.toml
embedded-hal-i2c-target/src/: lib.rs  simulator.rs
embedded-hal-i2c/src/: lib.rs
i2c-io-expander/: Cargo.toml
i2c-io-expander/src/: lib.rs  tests.rs
i2c-ram/: Cargo.toml
i2c-ram/src/: driver.rs  lib.rs
i2c-ram/tests/: main.rs
simulator/: Cargo.toml
simulator/src/: controller.rs  lib.rs  target.rs
simulator/tests/: conformance.rs  main.rs
